add specialized swiss tables